--- a/assets/css/sidebar.css
+++ b/assets/css/sidebar.css
@@ -1,5 +1,6 @@
 body {
-    position: relative; }
+    position: relative; 
+  }
     body:before {
       position: absolute;
       content: "";
@@ -13,14 +14,18 @@ body {
       visibility: hidden;
       -webkit-transition: .3s all ease-in-out;
       -o-transition: .3s all ease-in-out;
-      transition: .3s all ease-in-out; }
+      transition: .3s all ease-in-out; 
+    }
     body.show-sidebar:before {
       opacity: 1;
-      visibility: visible; }
+      visibility: visible; 
+    }
+
 
 aside, main {
     height: 100vh;
-    min-height: 580px; }
+    min-height: 580px; 
+  }
   
   aside {
     width: 350px;
@@ -30,16 +35,18 @@ aside, main {
     -webkit-transform: translateX(-100%);
     -ms-transform: translateX(-100%);
     transform: translateX(-100%);
-    background-color: #fff;
+    background-color: #4f6e86;
     -webkit-transition: 1s -webkit-transform cubic-bezier(0.23, 1, 0.32, 1);
     transition: 1s -webkit-transform cubic-bezier(0.23, 1, 0.32, 1);
     -o-transition: 1s transform cubic-bezier(0.23, 1, 0.32, 1);
     transition: 1s transform cubic-bezier(0.23, 1, 0.32, 1);
-    transition: 1s transform cubic-bezier(0.23, 1, 0.32, 1), 1s -webkit-transform cubic-bezier(0.23, 1, 0.32, 1); }
+    transition: 1s transform cubic-bezier(0.23, 1, 0.32, 1), 1s -webkit-transform cubic-bezier(0.23, 1, 0.32, 1); 
+  }
     .show-sidebar aside {
       -webkit-transform: translateX(0%);
       -ms-transform: translateX(0%);
-      transform: translateX(0%); }
+      transform: translateX(0%); 
+    }
     aside .toggle {
       padding-left: 30px;
       padding-top: 11px;
@@ -47,49 +54,21 @@ aside, main {
       right: 0;
       -webkit-transform: translateX(100%);
       -ms-transform: translateX(100%);
-      transform: translateX(100%); }
+      transform: translateX(100%); 
+    }
       .show-sidebar aside .toggle .burger:before, .show-sidebar aside .toggle .burger span, .show-sidebar aside .toggle .burger:after {
-        background: #fff; }
+        background: #fff; 
+      }
     .show-sidebar aside {
       -webkit-box-shadow: 10px 0 30px 0 rgba(0, 0, 0, 0.1);
-      box-shadow: 10px 0 30px 0 rgba(0, 0, 0, 0.1); }
+      box-shadow: 10px 0 30px 0 rgba(0, 0, 0, 0.1); 
+    }
     aside .side-inner {
       padding: 20px 0;
       height: 100vh;
-      overflow-y: scroll;
-      -webkit-overflow-scrolling: touch; }
-      aside .side-inner .tags, aside .side-inner .activity, aside .side-inner .location, aside .side-inner .fav-profiles {
-        padding-left: 20px;
-        padding-right: 20px;
-        margin-bottom: 30px; }
-        aside .side-inner .tags h3, aside .side-inner .activity h3, aside .side-inner .location h3, aside .side-inner .fav-profiles h3 {
-          color: #000;
-          font-size: 16px; }
-        aside .side-inner .tags ul, aside .side-inner .activity ul, aside .side-inner .location ul, aside .side-inner .fav-profiles ul {
-          font-weight: 300; }
-          aside .side-inner .tags ul, aside .side-inner .tags ul li, aside .side-inner .activity ul, aside .side-inner .activity ul li, aside .side-inner .location ul, aside .side-inner .location ul li, aside .side-inner .fav-profiles ul, aside .side-inner .fav-profiles ul li {
-            padding: 0;
-            margin: 0;
-            list-style: none; }
-          aside .side-inner .tags ul li, aside .side-inner .activity ul li, aside .side-inner .location ul li, aside .side-inner .fav-profiles ul li {
-            display: inline-block;
-            color: #adadad; }
-            aside .side-inner .tags ul li a, aside .side-inner .activity ul li a, aside .side-inner .location ul li a, aside .side-inner .fav-profiles ul li a {
-              color: #adadad; }
-              aside .side-inner .tags ul li a:hover, aside .side-inner .activity ul li a:hover, aside .side-inner .location ul li a:hover, aside .side-inner .fav-profiles ul li a:hover {
-                color: #141414; }
-      aside .side-inner .fav-profiles h3 {
-        margin-bottom: 20px; }
-      aside .side-inner .fav-profiles img {
-        border-radius: 7px; }
-      aside .side-inner .counter {
-        padding-bottom: 30px; }
-        aside .side-inner .counter div {
-          padding-right: 0;
-          padding-left: 0; }
-          aside .side-inner .counter div .number, aside .side-inner .counter div .number-label {
-            font-size: 16px;
-            color: #000; }
+      overflow-y: hidden;
+      -webkit-overflow-scrolling: touch; 
+    }
   /* Burger */
 .burger {
     width: 28px;
@@ -97,7 +76,8 @@ aside, main {
     cursor: pointer;
     position: relative;
     z-index: 99;
-    float: right; }
+    float: right; 
+  }
   
   .burger:before, .burger span, .burger:after {
     width: 100%;
@@ -106,7 +86,8 @@ aside, main {
     background: #000;
     border-radius: 2px;
     position: absolute;
-    opacity: 1; }
+    opacity: 1; 
+  }
   
   .burger:before, .burger:after {
     -webkit-transition: top 0.35s cubic-bezier(0.23, 1, 0.32, 1), opacity 0.35s cubic-bezier(0.23, 1, 0.32, 1), background-color 1.15s cubic-bezier(0.86, 0, 0.07, 1), -webkit-transform 0.35s cubic-bezier(0.23, 1, 0.32, 1);
@@ -115,30 +96,38 @@ aside, main {
     transition: top 0.35s cubic-bezier(0.23, 1, 0.32, 1), transform 0.35s cubic-bezier(0.23, 1, 0.32, 1), opacity 0.35s cubic-bezier(0.23, 1, 0.32, 1), background-color 1.15s cubic-bezier(0.86, 0, 0.07, 1);
     transition: top 0.35s cubic-bezier(0.23, 1, 0.32, 1), transform 0.35s cubic-bezier(0.23, 1, 0.32, 1), opacity 0.35s cubic-bezier(0.23, 1, 0.32, 1), background-color 1.15s cubic-bezier(0.86, 0, 0.07, 1), -webkit-transform 0.35s cubic-bezier(0.23, 1, 0.32, 1);
     -webkit-transition: top 0.35s cubic-bezier(0.23, 1, 0.32, 1), -webkit-transform 0.35s cubic-bezier(0.23, 1, 0.32, 1), opacity 0.35s cubic-bezier(0.23, 1, 0.32, 1), background-color 1.15s cubic-bezier(0.86, 0, 0.07, 1);
-    content: ""; }
+    content: ""; 
+  }
   
   .burger:before {
-    top: 4px; }
+    top: 4px; 
+  }
   
   .burger span {
-    top: 15px; }
+    top: 15px; 
+  }
   
   .burger:after {
-    top: 26px; }
+    top: 26px; 
+  }
   
   /* Hover */
   .burger:hover:before {
-    top: 7px; }
+    top: 7px; 
+  }
   
   .burger:hover:after {
-    top: 23px; }
+    top: 23px; 
+  }
   
   /* Click */
   .burger.active span {
-    opacity: 0; }
+    opacity: 0; 
+  }
   
   .burger.active:before, .burger.active:after {
-    top: 40%; }
+    top: 40%; 
+  }
   
   .burger.active:before {
     -webkit-transform: rotate(45deg);
@@ -153,4 +142,5 @@ aside, main {
     /*for IE*/ }
   
   .burger:focus {
-    outline: none; }
+    outline: none; 
+  }
