--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,22 @@
-
     /* Navbar */
     .navbar{
         background-color: #9bbcda;
         height: 3.3em;
+
+    }
+    /* Sidebar */
+    .side-inner .container-fluid .row span{
+        border-bottom: 3px solid white;
+        margin-bottom: 2%;
+    }
+    .side-inner{
+        color: white;
+    }
+    .side-inner a{
+        text-decoration: none;
+        color: white;
+    }
+    .side-inner a:hover{
+        text-decoration: none;
+        background-color: rgba(255, 255, 255, 0.39);
     }
