--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,9 @@
+
+:root{
+    --color1:  #9bbcda;
+    --color2:  #4f6e86;
+}
+
 body{
     font-family: 'Montserrat';
 }
@@ -6,7 +12,7 @@ body{
 
 /* Navbar */
     .navbar{
-        background-color: #9bbcda;
+        background-color: var(--color1);
         height: 3.3em;
 
     }
@@ -27,15 +33,80 @@ body{
         background-color: rgba(255, 255, 255, 0.39);
     }
 
-    /* LandingPage */
+/* LandingPage */
+
+h2{
+    text-transform: uppercase;
+}
+h3{
+    text-transform: uppercase;
+    font-size: 1.5em;
+    margin-bottom: 2em;
+}
+#logoLandingPage{
+    margin-top: 10vh;
+    max-width: 60vw;
+    max-height: 60vh;
+    margin-bottom: auto;
+}
 #landingPage1{
     background: cadetblue;
+    min-height: 100vh;
+    display: flex;
+    justify-content: center; 
+}
+.sectionTitle{
+    margin-top: 5vh;
+    align-items: center;
+}
+.smallHr{
+    width: 8vw;
+    height: 0.6vh;
+    background-color: var(--color1);
+    margin: 0.8vh 0;
+}
+#landingPage2{
+    min-height: 100vh;
+    text-align: center;
+}
+#imgTest1{
+    height: 60vh;
+    width: 30vw;
+    background-color: teal;
+    position: relative;
+    left: -5vw;
+    top: 5vh;
+    margin-bottom: 10vh;
 }
 
-#logoLandingPage{
-    max-height: 100%;
+#whoWeAreContainer{
+    max-width: 70vw;
+    margin-left: auto;
+    margin-right: auto;
+    border: var(--color1) 2vh solid;
 }
+#whoWeAreText{
+    border: tomato 1px solid;
+    margin: 5vh auto 5vh auto;
+}
+
+
 
 .reserveButton{
-    background-color: cadetblue;
+    background-color: var(--color1);
+    border: 2px solid var(--color2);
+    padding: 0.5em 0.8em 0.5em 0.8em;
+    border-radius: 7px;
+    text-transform: uppercase;
+    color: white;
+    position: fixed;
+    bottom: 15vh;
+    margin: auto;
+    z-index: 1000;
+}
+.reserveButton:hover{
+    color: white;
+    background-color: var(--color2);
+    border: 2px solid var(--color1);
+    text-decoration: none;
 }
