--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -113,6 +113,12 @@ h4{
     height: 100%;
     visibility: hidden;
 } */
+.imgOn{
+    filter: sepia(60%);
+}
+.imgOut{
+    filter: sepia(0%);
+}
 #imgRoom1{
     max-height: 60vh;
     background-color: teal;
