--- a/assets/css/form.css
+++ b/assets/css/form.css
@@ -1,22 +1,24 @@
 .section {
-    position: relative;
-    height  : 100vh
+    position  : relative;
+    min-height: 100vh;
 }
 
 .section .section-center {
-    position         : absolute;
+    position         : relative;
     top              : 50%;
     left             : 0;
     right            : 0;
     -webkit-transform: translateY(-50%);
-    transform        : translateY(-50%)
+    transform        : translateY(-50%);
+    padding-bottom   : 3rem;
 }
 
 #booking {
+    margin-top         : 3.3em;
     font-family        : montserrat, sans-serif;
     background-image   : url(../img/reserve/luxury.jpg);
     background-size    : cover;
-    background-position: center
+    background-position: center;
 }
 
 #booking::before {
@@ -26,23 +28,23 @@
     right     : 0;
     bottom    : 0;
     top       : 0;
-    background: rgba(255, 255, 255, .8)
+    background: rgba(255, 255, 255, .8);
 }
 
 .booking-cta {
-    margin-top: 45px
+    margin-top: 45px;
 }
 
 .booking-cta h1 {
-    font-size     : 52px;
+    font-size     : 40px;
     text-transform: uppercase;
     color         : #181818;
-    font-weight   : 900
+    font-weight   : 650;
 }
 
 .booking-cta p {
     font-size: 22px;
-    color    : #181818
+    color    : #181818;
 }
 
 .booking-form {
@@ -52,19 +54,19 @@
     max-width         : 642px;
     width             : 100%;
     margin            : auto;
-    padding           : 40px 30px
+    padding           : 40px 30px;
 }
 
 .booking-form .form-group {
     position     : relative;
-    margin-bottom: 20px
+    margin-bottom: 20px;
 }
 
 .booking-form .form-control {
     background-color  : #fff;
     height            : 55px;
     padding           : 0;
-    padding-top       : 15px;
+    padding-top       : 25px;
     color             : #181818;
     font-size         : 16px;
     font-weight       : 700;
@@ -74,60 +76,60 @@
     border-bottom     : 2px solid rgba(0, 0, 0, .2);
     border-radius     : 0;
     -webkit-transition: .2s;
-    transition        : .2s
+    transition        : .2s;
 }
 
 .booking-form .form-control::-webkit-input-placeholder {
-    color: rgba(0, 0, 0, .2)
+    color: rgba(0, 0, 0, .2);
 }
 
 .booking-form .form-control:-ms-input-placeholder {
-    color: rgba(0, 0, 0, .2)
+    color: rgba(0, 0, 0, .2);
 }
 
 .booking-form .form-control::placeholder {
-    color: rgba(0, 0, 0, .2)
+    color: rgba(0, 0, 0, .2);
 }
 
 .booking-form input[type=date].form-control:invalid {
-    color: rgba(0, 0, 0, .2)
+    color: rgba(0, 0, 0, .2);
 }
 
 .booking-form .form-group:not(.input-not-empty) .form-control:not(:focus) {
-    color: transparent
+    color: transparent;
 }
 
 .booking-form select.form-control {
     -webkit-appearance: none;
     -moz-appearance   : none;
-    appearance        : none
+    appearance        : none;
 }
 
 .booking-form select.form-control+.select-arrow {
     position      : absolute;
-    right         : 0;
-    bottom        : 7px;
+    right         : -5px;
+    bottom        : 0px;
     width         : 32px;
     line-height   : 32px;
     height        : 32px;
     text-align    : center;
     pointer-events: none;
     color         : rgba(0, 0, 0, .2);
-    font-size     : 14px
+    font-size     : 14px;
 }
 
 .booking-form select.form-control+.select-arrow:after {
     content          : '\279C';
     display          : block;
     -webkit-transform: rotate(90deg);
-    transform        : rotate(90deg)
+    transform        : rotate(90deg);
 }
 
 .booking-form .form-label {
     color             : rgba(0, 0, 0, .2);
     font-weight       : 700;
     position          : absolute;
-    top               : 20px;
+    top               : 28px;
     left              : 0;
     text-transform    : uppercase;
     line-height       : 24px;
@@ -135,24 +137,24 @@
     font-size         : 16px;
     pointer-events    : none;
     -webkit-transition: .2s all;
-    transition        : .2s all
+    transition        : .2s all;
 }
 
 .booking-form .form-group .form-control:focus+.form-label {
     top      : 0;
-    color    : #2b9328;
-    font-size: 14px
+    color    : var(--color2);
+    font-size: 14px;
 }
 
 .booking-form .form-group.input-not-empty .form-label {
     top      : 0;
-    color    : #2b9328;
-    font-size: 14px
+    color    : var(--color2);
+    font-size: 14px;
 }
 
 .booking-form .submit-btn {
     color           : #fff;
-    background-color: #2b9328;
+    background-color: var(--color2);
     font-weight     : 700;
     height          : 55px;
     padding         : 10px 35px;
@@ -160,5 +162,7 @@
     border          : none;
     display         : block;
     width           : 100%;
-    text-transform  : capitalize
+    text-transform  : capitalize;
+}
+input[type="file" i]{
 }
