--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,15 +13,17 @@ body {
 .disparition {
     display: none !important;
 }
+
 .fadeIn {
     visibility: visible !important;
     transition: 0.5s;
-    opacity: 1;
+    opacity   : 1;
 }
+
 .fadeOut {
     visibility: hidden !important;
     transition: 0.2s;
-    opacity: 0;
+    opacity   : 0;
 }
 
 /* Navbar && Sidebar */
@@ -29,6 +31,7 @@ body {
     background-color: var(--color1);
     height          : 3.3em;
     padding         : 0;
+    box-shadow      : 0px 1px 10px 0px rgba(0, 0, 0, 0.2);
 }
 
 #navbarSupportedContent {
@@ -62,10 +65,10 @@ nav .navbar-collapse a:hover {
 
 #logoNavBar {
     height: 2em;
-    
-    left: 0;
-    right: 0;
+    left  : 0;
+    right : 0;
 }
+
 /* LandingPage */
 h2 {
     text-transform: uppercase;
@@ -89,6 +92,7 @@ h4 {
     max-width    : 10em;
     margin       : 0.5em auto 0.5em auto;
 }
+
 .photoResize {
     height: 100%;
 }
@@ -153,11 +157,13 @@ h4 {
     margin-left : auto;
     margin-right: auto;
 }
-#journey{
-    max-width   : 90vw;
+
+#journey {
+    max-width: 90vw;
 }
-#experience{
-    max-width   : 75vw;
+
+#experience {
+    max-width: 75vw;
 }
 
 /* FIXME: */
@@ -196,7 +202,7 @@ h4 {
 }
 
 #imgRoom2 {
-    max-height          : 20em;
+    max-height      : 20em;
     background-color: paleturquoise;
     margin-top      : 12em;
     border-right    : none;
@@ -204,32 +210,32 @@ h4 {
 }
 
 #imgRoom3 {
-    max-height          : 20em;
+    max-height      : 20em;
     background-color: palegreen;
     margin-top      : 2em;
     border-left     : none;
 }
 
 #imgExperience1 {
-    max-height          : 25em;
+    max-height      : 25em;
     background-color: teal;
 }
 
 #imgExperience2 {
-    max-height          : 25em;
+    max-height      : 25em;
     background-color: teal;
 }
 
-.imgLegend{
-    position  : absolute;
-    transform : translateX(-50%) translateY(-50%);
-    top       : 50%;
-    left      : 50%;
+.imgLegend {
+    position      : absolute;
+    transform     : translateX(-50%) translateY(-50%);
+    top           : 50%;
+    left          : 50%;
     text-transform: uppercase;
-    color: var(--colorWhite);
-    font-size: 1.5em;
-    text-align: center;
-    width: 90%;
+    color         : var(--colorWhite);
+    font-size     : 1.5em;
+    text-align    : center;
+    width         : 90%;
 }
 
 /* Buttons */
@@ -257,7 +263,8 @@ h4 {
     margin  : auto;
 }
 
-.journeyButton, .experienceButton {
+.journeyButton,
+.experienceButton {
     position  : absolute;
     transform : translateX(-50%) translateY(-50%);
     top       : 65%;
