--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,7 @@
     --color1        : #9bbcda;
     --color1opacity8: rgb(155, 188, 218, 0.8);
     --color1opacity2: rgb(155, 188, 218, 0.2);
+    --color1opacity4: rgb(155, 188, 218, 0.4);
     --color2        : #4f6e86;
     --colorWhite    : white;
 }
@@ -86,7 +87,6 @@ h4 {
 
 .smallHr {
     border-bottom: 3px solid var(--color1);
-    margin-bottom: 2%;
     max-width    : 10em;
     margin       : 0.5em auto 0.5em auto;
 }
@@ -140,6 +140,7 @@ h4 {
 }
 
 #imgTest1 {
+    max-width   : 40em;
     max-height      : 35em;
     width           : auto;
     background-color: teal;
@@ -199,7 +200,7 @@ h4 {
 #imgRoom2 {
     max-height          : 20em;
     background-color: paleturquoise;
-    margin-top      : 12em;
+    margin-top     : 13em;
     border-right    : none;
 
 }
@@ -226,11 +227,33 @@ h4 {
     transform : translateX(-50%) translateY(-50%);
     top       : 50%;
     left      : 50%;
-    text-transform: uppercase;
+    width: 90%;
     color: var(--colorWhite);
+
+}
+.imgLegend{
+    text-transform: uppercase;
     font-size: 1.5em;
     text-align: center;
-    width: 90%;
+}
+/* TODO: */
+#linkRoom{
+    color: var(--color2);
+    font-size: 1.7em;
+}
+#linkRoomContainer {
+    padding: 2em 0;
+    position: relative;
+}
+.lineUp{
+    height: 8em;
+    width: 1px;
+    border: 1px solid var(--colorWhite);
+    position: absolute;
+    transform : translateX(-50%) translateY(-50%);
+    left      : 50%;
+    margin-top: -4em;
+    z-index: 1000;
 }
 
 /* Buttons */
@@ -265,6 +288,37 @@ h4 {
     left      : 50%;
     background: var(--color1opacity2);
 }
+
+
+/* Carousel */
+
+
+
+/* Soulignement */
+
+.underline {
+    position: relative;
+  }
+.underline:hover {
+    text-decoration: none;
+  }
+.underline::after {
+    content: '';
+    transform-origin: 0 0; 
+    transform: scaleX(0);
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: .05em; 
+    background: var(--color1);
+    z-index: -1;
+    opacity: 0.8;
+    transition: transform .3s;
+  }
+.underline:hover::after {
+    transform: scaleX(1);
+  }
 
 /* Footer */
 
