--- a/assets/css/form.css
+++ b/assets/css/form.css
@@ -21,14 +21,23 @@
     background-position: center;
 }
 
-#booking::before {
+#recrute {
+    margin-top         : 3.3em;
+    font-family        : montserrat, sans-serif;
+    background-image   : url(../img/recrutement/Hotel-de-Crillon-les-artisans-du-palace.jpg);
+    background-size    : cover;
+    background-position: center;
+}
+
+#booking::before,
+#recrute::before {
     content   : '';
     position  : absolute;
     left      : 0;
     right     : 0;
     bottom    : 0;
     top       : 0;
-    background: rgba(255, 255, 255, .8);
+    background: rgba(197, 210, 223, 0.747);
 }
 
 .booking-cta {
@@ -164,5 +173,22 @@
     width           : 100%;
     text-transform  : capitalize;
 }
-input[type="file" i]{
+
+#fakeInputMotivation,
+#fakeInputCv {
+    position: absolute;
+    top     : 0px;
+}
+
+#textArea {
+    resize: none;
+}
+
+.textArea {
+    margin-top: 25px;
+    height    : 200px !important;
+}
+
+.labelTextArea {
+    top: -25px !important;
 }
