--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -68,6 +68,10 @@ nav .navbar-collapse a:hover {
     padding: 3px;
     left   : 0;
     right  : 0;
+    width: auto;
+    max-width: 100%;
+    max-height: 3em;
+    margin: auto;
 }
 
 /* LandingPage */
