--- a/assets/css/room-style.css
+++ b/assets/css/room-style.css
@@ -1,11 +1,19 @@
 .sectionSize {
-    padding-top  : 5.3em;
-    margin-bottom: 2em;
-    min-height   : calc(100vh - 2em);
+    /* padding-top  : 3.3em; */
+    padding-bottom: 2em;
+    min-height   : calc(100vh);
+    background-color: var(--color1opacity2);
 }
-
 .chooseButton {
     background-color: var(--color1opacity4);
+}
+
+.gammeTitle{
+    margin-bottom: 0em;
+    
+}
+.carouselContainer{
+    min-height: 100vh;
 }
 
 .carousel-caption {
@@ -19,8 +27,7 @@
 .carousel-caption h2 {
     padding-bottom: 1vh;
 }
-
-.carousel-caption h2:hover {
+.carousel-caption h2 a:hover {
     text-decoration: none;
 }
 .carousel-caption a{
@@ -36,7 +43,7 @@
         font-size: 1.5em;
     }
 
-    .carousel-caption h2:hover {
+    .carousel-caption h2 a:hover {
         text-decoration: underline;
     }
     
