--- a/assets/css/style992px.css
+++ b/assets/css/style992px.css
@@ -1,5 +1,7 @@
 @media (max-width: 992px) {
-
+    #toggle-btn{
+        display: none;
+    }
     #imgTest1 {
         position: static;
     }
@@ -31,5 +33,8 @@
     }
     .experienceButton{
         top: 70%;
+    }
+    .iconContainer{
+        padding: 0.5em 0;
     }
 }
