--- a/assets/css/style992px.css
+++ b/assets/css/style992px.css
@@ -1,5 +1,5 @@
 @media (max-width: 992px) {
-    #toggle-btn{
+    #toggle-btn , nav .flex-row-reverse #search{
         display: none;
     }
     #imgTest1 {
