--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -246,13 +246,14 @@ h4 {
     top      : 50%;
     left     : 50%;
     width    : 90%;
-
-}
-
-.imgLegend {
     text-transform: uppercase;
     font-size     : 1.5em;
     text-align    : center;
+}
+
+.imgLegend p{
+    padding: 0px;
+    margin: 0px;
 }
 .legendOn {
     color    : var(--color2);
@@ -358,7 +359,9 @@ h4 {
 .underline:hover::after {
     transform: scaleX(1);
 }
-
+.iconContainer{
+    line-height: 1.2em;
+}
 .iconSize{
     height: 2.5em;
 }
