--- a/assets/css/care.css
+++ b/assets/css/care.css
@@ -8,6 +8,9 @@
     max-height      : 25em;
     background-color: teal;
 }
+#care1, #care2, #care3{
+    margin-bottom: 4vh;
+}
 
 .careCard{
     padding: 0;
