--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,7 @@
     --color1opacity4: rgb(155, 188, 218, 0.4);
     --color2        : #4f6e86;
     --colorWhite    : white;
-    --colorWhiteOpcity5   : rgb(255, 255, 255, 0.5);
+    --colorWhiteOpacity5   : rgb(255, 255, 255, 0.5);
 }
 
 body {
@@ -428,26 +428,29 @@ footer {
 }
 
 #searching {
-    padding-top   : 0.25rem;
-    padding-bottom: 0.25rem;
+    padding-top   : 0.5rem;
+    padding-bottom: 0.5rem;
 
 }
 
 #searching input {
-    width        : 300px;
-    height       : 2.8rem;
+    width        : 250px;
+    height       : 2.3rem;
     box-sizing   : border-box;
-    border-radius: 25px;
+    border-radius: 13px;
     border       : 0;
-    background   : rgba(238, 238, 238, 0.308);
+    background   :  var(--color1);
     font-size    : 17px;
     transition   : all 0.5s;
 }
 
 #searching input:hover {
-    background: rgba(204, 204, 204, 0.274);
+    background: rgba(221, 215, 215, 0.5);
 }
-
+#searching input::placeholder{
+    color: var(--colorWhite);
+    padding-left: .5rem;
+}
 #searching input:focus {
     outline: none;
 }
