Adding : Formulaire d'advise

--- a/assets/css/form.css
+++ b/assets/css/form.css
@@ -29,8 +29,17 @@
     background-position: center;
 }
 
+#contact {
+    margin-top         : 3.3em;
+    font-family        : montserrat, sans-serif;
+    background-image   : url(../img/recrutement/Hotel-de-Crillon-les-artisans-du-palace.jpg);
+    background-size    : cover;
+    background-position: center;
+}
+
 #booking::before,
-#recrute::before {
+#recrute::before,
+#contact::before {
     content   : '';
     position  : absolute;
     left      : 0;
