--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -32,6 +32,7 @@
 
 #whoWeAreContainer {
     max-width   : 70vw;
+    margin-bottom: 2em;
     margin-left : auto;
     margin-right: auto;
     border      : var(--color1) 2vh solid;
