--- a/assets/css/style1200px.css
+++ b/assets/css/style1200px.css
@@ -2,4 +2,17 @@
     .mb-4vh {
         margin-bottom: 4vh;
     }
+    #imgTest1 {
+        position: static!important;
+        margin-bottom   : 5vh;
+    }
+    #whoWeAreContainer {
+        max-width: 95vw;
+        border   : none;
+    }
+    #whoWeAreText {
+        text-align: center;
+        margin    : 0 auto 1vh auto;
+    }
+    
 }
